Source/WebKit2/UIProcess/API/gtk/WebKitEditorState.cpp
@@ -106,6 +106,9 @@ WebKitEditorState* webkitEditorStateCreate(const EditorState& state)
 
 void webkitEditorStateChanged(WebKitEditorState* editorState, const EditorState& newState)
 {
+    if (newState.isMissingPostLayoutData)
+        return;
+
     unsigned typingAttributes = WEBKIT_EDITOR_TYPING_ATTRIBUTE_NONE;
     const auto& postLayoutData = newState.postLayoutData();
     if (postLayoutData.typingAttributes & AttributeBold)
